--- a/index.html
+++ b/index.html
@@ -39,56 +39,58 @@
             <strong>Simular</strong>
         </button>
     </div>
-    <!-- <div class="events_container">
-        <p><strong>Simulación con eventos</strong></p> -->
-        <div class="table_container">
-            <table>
-                <thead>
-                    <tr>
-                        <th>vehiculo n</th>
-                        <th>Hora llegada</th>
-                        <th>Hora atencion</th>
-                        <th>Hora salida</th>
-                        <th>Tiempo de Atencion</th>
-                    </tr>
-                </thead>
-                <tbody id="list_events">
-                    <tr>
-                        <td>0</td>
-                        <td>0:00:00</td>
-                        <td>0:00:00</td>
-                        <td>0:00:00</td>
-                        <td>0h 0m 0s</td>
-                    </tr>
-                </tbody>
-            </table>
+    <div class="results_container">
+        <div class="events_container">
+            <p><strong>Simulación con eventos</strong></p>
+            <div class="table_container">
+                <table>
+                    <thead>
+                        <tr>
+                            <th>vehiculo n</th>
+                            <th>Hora llegada</th>
+                            <th>Hora atencion</th>
+                            <th>Hora salida</th>
+                            <th>Tiempo de Atencion</th>
+                        </tr>
+                    </thead>
+                    <tbody id="list_events">
+                        <tr>
+                            <td>0</td>
+                            <td>0:00:00</td>
+                            <td>0:00:00</td>
+                            <td>0:00:00</td>
+                            <td>0h 0m 0s</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
         </div>
-    <!-- </div> -->
-    <!-- <div class="events_container">
-        <p><strong>Simulación con intervalos</strong></p> -->
-        <div class="table_container">
-            <table>
-                <thead>
-                    <tr>
-                        <th>segundo n</th>
-                        <th>Hora llegada</th>
-                        <th>Hora atencion</th>
-                        <th>Hora salida</th>
-                        <th>Tiempo de Atencion</th>
-                    </tr>
-                </thead>
-                <tbody id="list_intervals">
-                    <tr>
-                        <td>0</td>
-                        <td>0:00:00</td>
-                        <td>0:00:00</td>
-                        <td>0:00:00</td>
-                        <td>0h 0m 0s</td>
-                    </tr>
-                </tbody>
-            </table>
+        <div class="events_container">
+            <p><strong>Simulación con intervalos</strong></p>
+            <div class="table_container">
+                <table>
+                    <thead>
+                        <tr>
+                            <th>segundo n</th>
+                            <th>Hora llegada</th>
+                            <th>Hora atencion</th>
+                            <th>Hora salida</th>
+                            <th>Tiempo de Atencion</th>
+                        </tr>
+                    </thead>
+                    <tbody id="list_intervals">
+                        <tr>
+                            <td>0</td>
+                            <td>0:00:00</td>
+                            <td>0:00:00</td>
+                            <td>0:00:00</td>
+                            <td>0h 0m 0s</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
         </div>
-    <!-- </div> -->
+    </div>
     <script src="time_line.js"></script>
 </body>
 </html>
