Add label results (In Queue)

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
                     </tbody>
                 </table>
             </div>
+            <p><strong>Atendidos: 0<br>En cola: 0</strong></p>
         </div>
         <div class="events_container">
             <p><strong>Simulación con intervalos</strong></p>
@@ -89,6 +90,7 @@
                     </tbody>
                 </table>
             </div>
+            <p><strong>Atendidos: 0<br>En cola: 0</strong></p>
         </div>
     </div>
     <script src="time_line.js"></script>
